Tests working from IDE (not from CLI yet)